letflix correction class and alignement

--- a/src/components/TextIcon/TextIcon.module.sass
+++ b/src/components/TextIcon/TextIcon.module.sass
@@ -3,7 +3,7 @@
 .TextAndIcon
   display: flex
   flex-direction: column
-  width: 80px
+  width: 85px
 
   .TextForIcon
     font-family: $font
